# CovidTracker-Backend

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
MyCovidTracker/: asgi.py  settings.py  urls.py  wsgi.py
mainApp/: admin.py  models.py  serializer.py  views.py
mainApp/migrations/: 0001_initial.py  0002_mycovidrecord_created_date_alter_mycovidrecord_date.py  0003_mycovidrecord_country_name_and_more.py
