
[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["salimhass <salim.hassouneh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.5.2"
certifi = "2022.9.24"
charset-normalizer= "2.1.1"
Django= "4.1.3"
django-cors-headers= "3.13.0"
djangorestframework= "3.14.0"
idna= "3.4"
psycopg2= "2.9.5"
pytz= "2022.6"
requests= "2.28.1"
sqlparse= "0.4.3"
tzdata= "2022.7"
urllib3= "1.26.13"
gunicorn = "^20.0.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
